AUTOMAKE_OPTIONS = foreign

CFLAGS = -Wall -pedantic

bin_PROGRAMS = demo

demo_SOURCES = \
			   cttf/bstree.c \
			   cttf/cttftext.c \
			   cttf/list.c \
			   cttf/qsortv.c \
			   cttf/render.c \
			   cttf/shape.c \
			   cttf/stack.c \
			   cttf/treeset.c \
			   cttf/triangulate.c \
			   cttf/ttf.c \
			   cttf/typeset.c \
			   Demo/Audio.cpp \
			   Demo/Demo.cpp \
			   Demo/FireAnimation.cpp \
			   Demo/FluidAnimation.cpp \
			   Demo/FrameBuffer.cpp \
			   Demo/Graphics.cpp \
			   Demo/Octree.cpp \
			   Demo/PTAnimation.cpp \
			   Demo/Shader.cpp \
			   Demo/SkyAnimation.cpp \
			   Demo/Texture.cpp \
			   Demo/TF3D.cpp \
			   Demo/TitleAnimation.cpp
